[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/dc0dw0y-6473555f-a449-4ca2-a519-7522693e870e.jpg" type="Texture" id=5]
[ext_resource path="res://sounds/fail_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://ui/menu_theme.tres" type="Theme" id=13]
[ext_resource path="res://ui/basic_theme_smaller.tres" type="Theme" id=14]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=15]
[ext_resource path="res://scenes/game_over/game_over.gd" type="Script" id=16]
[ext_resource path="res://animation/increase_scale_low_fps.tres" type="Animation" id=17]
[ext_resource path="res://art/hand.png" type="Texture" id=18]
[ext_resource path="res://art/bg_shadow.png" type="Texture" id=24]
[ext_resource path="res://sounds/start_game.wav" type="AudioStream" id=25]

[sub_resource type="Animation" id=4]
resource_name = "increase_scale_larger"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 0.450625, 2.82843, 0.5, 0.707107 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.4, 2.4 ), Vector2( 1.8, 1.8 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "pump_scale"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.9, 1.9 ), Vector2( 1.8, 1.8 ), Vector2( 1.9, 1.9 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "start_game"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="game_over" type="Node2D"]
script = ExtResource( 16 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -668.0
margin_top = 93.0
margin_right = 1252.0
margin_bottom = 1173.0
texture = ExtResource( 5 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 577.0
margin_bottom = 1027.0
theme = ExtResource( 15 )
color = Color( 0.00784314, 0.207843, 0.282353, 1 )

[node name="ScaleHelper" type="Control" parent="BackgroundColor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_right = -288.0
margin_bottom = -513.0
rect_scale = Vector2( 2, 2 )

[node name="guide_text" type="RichTextLabel" parent="BackgroundColor/ScaleHelper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.5
margin_top = -134.0
margin_right = 289.5
margin_bottom = -34.0
rect_pivot_offset = Vector2( 288, 50 )
theme = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center][wave]Game over!

You got fired"
text = "Game over!

You got fired"

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundColor/ScaleHelper/guide_text"]
autoplay = "increase_scale"
anims/increase_scale = ExtResource( 17 )

[node name="return" type="Button" parent="BackgroundColor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -327.0
margin_right = 90.0
margin_bottom = -288.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 90, 0 )
theme = ExtResource( 14 )
text = "exit to menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundColor/return"]
anims/increase_scale = ExtResource( 17 )
anims/increase_scale_larger = SubResource( 4 )
anims/pump_scale = SubResource( 5 )

[node name="bg_shadow" type="TextureRect" parent="BackgroundColor"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 24 )

[node name="hand" type="Sprite" parent="."]
visible = false
position = Vector2( 475, 783 )
rotation = -0.174533
texture = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="hand"]
autoplay = "start_game"
anims/start_game = SubResource( 6 )

[node name="button_feedback" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="fail_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="animation_finished" from="BackgroundColor/ScaleHelper/guide_text/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="BackgroundColor/return" to="." method="_on_return_pressed"]
